--- a/SerialAndSocket/app/src/main/res/layout/activity_main.xml
+++ b/SerialAndSocket/app/src/main/res/layout/activity_main.xml
@@ -13,21 +13,24 @@
 
     <Button
         android:text="网口UDP"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:id="@+id/button"
         />
     <Button
         android:text="网口TCP"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:id="@+id/button1"
         />
 
     <Button
         android:text="串口"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:id="@+id/button2"
         />
 </LinearLayout>
