--- a/SerialAndSocket/app/src/main/res/layout/activity_serial.xml
+++ b/SerialAndSocket/app/src/main/res/layout/activity_serial.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:weightSum="1">
+        >
         <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,8 +35,9 @@
     <TextView
         android:text="串口"
         android:textSize="25sp"
+        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/textView"
         />
 
