--- a/HeadControl/app/src/main/res/layout/activity_map.xml
+++ b/HeadControl/app/src/main/res/layout/activity_map.xml
@@ -1,91 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="@color/gray"
     android:orientation="vertical"
-    tools:context="com.android.jdrd.headcontrol.activity.MapActivity">
+    >
 
     <com.android.jdrd.headcontrol.view.MyView
         android:id="@+id/surfaceview"
-        android:layout_width="600dp"
-        android:layout_height="900dp"
+        android:layout_width="200dp"
+        android:layout_height="300dp"
         />
     <View
         android:layout_width="match_parent"
         android:layout_height="1.0dp"/>
-    <Button
-        android:id="@+id/button_clearlast"
-        android:text="@string/button_clearlast"
-        android:textColor="@color/black"
-        android:background="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button_clearall"
-        android:text="@string/button_clearall"
-        android:textColor="@color/black"
-        android:background="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button_left"
-        android:text="@string/button_left"
-        android:textColor="@color/black"
-        android:background="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button_right"
-        android:text="@string/button_right"
-        android:textColor="@color/black"
-        android:background="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button_up"
-        android:text="@string/button_up"
-        android:textColor="@color/black"
-        android:background="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button_down"
-        android:text="@string/button_down"
-        android:textColor="@color/black"
-        android:background="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:digits="1234567890"
-        android:maxLength="3"
-        android:id="@+id/bitmap_center_x"/>
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:digits="1234567890"
-        android:maxLength="3"
-        android:id="@+id/bitmap_center_y"/>
-    <Button
-        android:id="@+id/button_move"
-        android:text="@string/button_move"
-        android:textColor="@color/black"
-        android:background="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:id="@+id/button_rote"
-        android:text="@string/button_rote"
-        android:textColor="@color/black"
-        android:background="@color/white"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+        <Button
+            android:id="@+id/button_clearlast"
+            android:text="@string/button_clearlast"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:background="@animator/button_select"
+            android:layout_height="wrap_content" />
+
+        <Button
+            android:id="@+id/button_clearall"
+            android:text="@string/button_clearall"
+            android:textColor="@color/black"
+            android:layout_width="wrap_content"
+            android:background="@animator/button_select"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/button_clearlast"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:id="@+id/button_rote"
+            android:text="@string/button_rote"
+            android:textColor="@color/black"
+            android:background="@animator/button_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/button_clearall"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true" />
+
+        <Button
+            android:id="@+id/button_move"
+            android:text="@string/button_move"
+            android:textColor="@color/black"
+            android:background="@animator/button_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBaseline="@+id/button_rote"
+            android:layout_alignBottom="@+id/button_rote"
+            android:layout_toRightOf="@+id/button_clearall"
+            android:layout_toEndOf="@+id/button_clearall" />
+
+        <Button
+            android:id="@+id/button_down"
+            android:text="@string/button_down"
+            android:textColor="@color/black"
+            android:background="@animator/button_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/button_clearlast"
+            android:layout_toEndOf="@+id/button_clearlast" />
+
+        <Button
+            android:id="@+id/button_up"
+            android:text="@string/button_up"
+            android:textColor="@color/black"
+            android:background="@animator/button_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/button_down"
+            android:layout_toEndOf="@+id/button_down" />
+
+        <Button
+            android:id="@+id/button_right"
+            android:text="@string/button_right"
+            android:textColor="@color/black"
+            android:background="@animator/button_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/button_up"
+            android:layout_toEndOf="@+id/button_up" />
+
+        <Button
+            android:id="@+id/button_left"
+            android:text="@string/button_left"
+            android:textColor="@color/black"
+            android:background="@animator/button_select"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/button_down"
+            android:layout_toRightOf="@+id/button_clearall"
+            android:layout_toEndOf="@+id/button_clearall" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:digits="1234567890"
+            android:maxLength="3"
+            android:hint="@string/app_name"
+            android:id="@+id/bitmap_center_y"
+            android:layout_below="@+id/button_down"
+            android:layout_toRightOf="@+id/button_down"
+            android:layout_toEndOf="@+id/button_down" />
+
+        <EditText
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:digits="1234567890"
+            android:maxLength="3"
+            android:hint="@string/app_name"
+            android:id="@+id/bitmap_center_x"
+            android:layout_below="@+id/bitmap_center_y"
+            android:layout_toRightOf="@+id/button_move"
+            android:layout_toEndOf="@+id/button_move" />
+
+
+    </RelativeLayout>
+
 </LinearLayout>
