--- a/HeadControl/app/src/main/res/values/styles.xml
+++ b/HeadControl/app/src/main/res/values/styles.xml
@@ -7,5 +7,8 @@
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
     </style>
+    <style name="MyTheme" parent="android:Theme.NoTitleBar.Fullscreen"/>
+    <style name="BaseTheme" parent="MyTheme">
+    </style>
 
 </resources>
