--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -160,19 +160,21 @@
             android:id="@+id/button_next"
             android:text="@string/savenext"
             style="@style/MyButton"
+            android:layout_height="100dp"
             />
         <EditText
             android:id="@+id/point_x"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="100dp" />
         <EditText
             android:id="@+id/point_y"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="100dp" />
         <Button
             android:id="@+id/button_move"
             android:text="@string/move"
             style="@style/MyButton"
+            android:layout_height="100dp"
             />
     </LinearLayout>
     <LinearLayout
