--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -7,6 +7,7 @@
     android:background="@mipmap/bg02"
     >
     <com.android.jdrd.headcontrol.view.MyView
+        android:layout_marginLeft="30dp"
         android:id="@+id/surfaceview"
         android:layout_width="640dp"
         android:layout_height="1040dp"
@@ -35,6 +36,14 @@
         <Button
             android:id="@+id/button_cruise"
             android:text="@string/button_cruise"
+            android:textColor="@color/black"
+            android:textSize="25sp"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            />
+        <Button
+            android:id="@+id/button_return"
+            android:text="@string/button_return"
             android:textColor="@color/black"
             android:textSize="25sp"
             android:layout_width="200dp"
@@ -164,10 +173,12 @@
             />
         <EditText
             android:id="@+id/point_x"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="100dp" />
         <EditText
             android:id="@+id/point_y"
+            android:inputType="number"
             android:layout_width="match_parent"
             android:layout_height="100dp" />
         <Button
