--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -75,19 +75,19 @@
             android:textColor="@color/black"
             />
         <Button
+            android:id="@+id/button_plan_stop"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:textSize="25sp"
+            android:text="@string/button_plan_back"
+            android:textColor="@color/black"
+            />
+        <Button
             android:id="@+id/button_plan"
             android:layout_width="200dp"
             android:layout_height="100dp"
             android:textSize="25sp"
             android:text="@string/button_plan"
-            android:textColor="@color/black"
-            />
-        <Button
-            android:id="@+id/button_plan_back"
-            android:layout_width="200dp"
-            android:layout_height="100dp"
-            android:textSize="25sp"
-            android:text="@string/button_plan_back"
             android:textColor="@color/black"
             />
     </LinearLayout>
