--- a/HeadControl/app/src/main/res/layout/fragment_battery.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_battery.xml
@@ -104,6 +104,7 @@
                                     android:text="%"
                                     android:textColor="@color/white"
                                     android:textSize="51sp"
+                                    android:visibility="gone"
                                     android:paddingTop="5dp"/>
                             </LinearLayout>
 
