--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -13,6 +13,7 @@
         android:layout_height="1040dp"
         />
     <LinearLayout
+        android:id="@+id/linearlayout_map"
         android:layout_width="wrap_content"
         android:orientation="vertical"
         android:layout_height="match_parent"
@@ -98,6 +99,14 @@
             android:text="@string/button_remove"
             android:textColor="@color/black"
             />
+        <Button
+            android:id="@+id/button_plan_back"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:textSize="25sp"
+            android:text="@string/back"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/relative_plan_info"
@@ -161,6 +170,14 @@
             android:text="@string/button_clearall"
             style="@style/MyButton"
             />
+        <Button
+            android:id="@+id/button_plan_info_back"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:textSize="25sp"
+            android:text="@string/back"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearlayout_point"
@@ -195,6 +212,14 @@
             style="@style/MyButton"
             android:layout_height="100dp"
             />
+        <Button
+            android:id="@+id/button_point_back"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:textSize="25sp"
+            android:text="@string/back"
+            android:textColor="@color/black"
+            />
     </LinearLayout>
     <LinearLayout
         android:id="@+id/linearlayout_roam"
@@ -213,6 +238,14 @@
             android:text="@string/roam_stop"
             style="@style/MyButton"
             android:layout_height="100dp"
+            />
+        <Button
+            android:id="@+id/button_roam_back"
+            android:layout_width="200dp"
+            android:layout_height="100dp"
+            android:textSize="25sp"
+            android:text="@string/back"
+            android:textColor="@color/black"
             />
     </LinearLayout>
 </LinearLayout>
