--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="@mipmap/bg02"
+    android:background="@mipmap/bg"
     >
     <com.android.jdrd.headcontrol.view.MyView
         android:layout_marginLeft="30dp"
