--- a/HeadControl/app/src/main/res/values/styles.xml
+++ b/HeadControl/app/src/main/res/values/styles.xml
@@ -121,4 +121,12 @@
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">18sp</item>
     </style>
+    <style name="MapButton">
+        <item name="android:background">@drawable/btn_map_selector</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">25sp</item>
+        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_height">100dp</item>
+        <item name="android:layout_width">200dp</item>
+    </style>
 </resources>
