--- a/HeadControl/app/src/main/res/layout/fragment_map.xml
+++ b/HeadControl/app/src/main/res/layout/fragment_map.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:background="@mipmap/bg"
+    android:background="@mipmap/bg10"
     >
     <com.android.jdrd.headcontrol.view.MyView
         android:layout_marginLeft="30dp"
@@ -17,6 +17,7 @@
         android:id="@+id/linearlayout_map"
         android:layout_width="wrap_content"
         android:orientation="vertical"
+        android:layout_marginTop="200dp"
         android:layout_height="match_parent"
         >
         <Button
@@ -43,6 +44,7 @@
     <LinearLayout
         android:id="@+id/relative_plan"
         android:layout_width="wrap_content"
+        android:layout_marginTop="200dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:visibility="gone"
@@ -86,6 +88,7 @@
         android:id="@+id/relative_plan_info"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
+        android:layout_marginTop="50dp"
         android:visibility="gone"
         android:orientation="vertical">
         <TextView
@@ -144,6 +147,7 @@
     <LinearLayout
         android:id="@+id/linearlayout_point"
         android:layout_width="200dp"
+        android:layout_marginTop="200dp"
         android:orientation="vertical"
         android:visibility="gone"
         android:layout_height="match_parent">
@@ -179,6 +183,7 @@
     <LinearLayout
         android:id="@+id/linearlayout_roam"
         android:layout_width="200dp"
+        android:layout_marginTop="200dp"
         android:orientation="vertical"
         android:visibility="gone"
         android:layout_height="match_parent">
