--- a/HeadControl/app/src/main/res/layout/dialog_warn.xml
+++ b/HeadControl/app/src/main/res/layout/dialog_warn.xml
@@ -7,10 +7,10 @@
         android:padding="20.0dip" >
 
         <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="500dp"
+            android:layout_height="300dp"
             android:layout_gravity="center"
-            android:background="@mipmap/ic_launcher"
+            android:background="@mipmap/bg"
             android:orientation="vertical" >
 
             <TextView
@@ -33,9 +33,10 @@
                     style="@style/text_16_666666"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="left|center"
+                    android:gravity="center"
                     android:lineSpacingMultiplier="1.5"
                     android:minHeight="120.0dip"
+                    android:layout_gravity="center"
                     android:paddingBottom="15.0dip"
                     android:paddingLeft="20.0dip"
                     android:paddingRight="20.0dip"
@@ -49,27 +50,26 @@
 
             <LinearLayout
                 android:layout_width="fill_parent"
-                android:layout_height="60.0dip"
+                android:layout_height="100dp"
                 android:layout_gravity="bottom"
-                android:background="@mipmap/ic_launcher"
                 android:gravity="center"
                 android:orientation="horizontal" >
 
                 <Button
                     android:id="@+id/positiveButton"
                     style="@style/text_15_ffffff_sdw"
-                    android:layout_width="114.0dip"
-                    android:layout_height="40.0dip"
+                    android:layout_width="120dp"
+                    android:layout_height="40dp"
                     android:background="@drawable/btn_save_background"
                     android:gravity="center"
                     android:text="@string/sure" />
 
                 <Button
                     android:id="@+id/negativeButton"
-                    style="@style/text_15_666666_sdw"
-                    android:layout_width="114.0dip"
-                    android:layout_height="40.0dip"
-                    android:layout_marginLeft="20.0dip"
+                    style="@style/text_15_ffffff_sdw"
+                    android:layout_width="120dp"
+                    android:layout_height="40dp"
+                    android:layout_marginLeft="40dp"
                     android:background="@drawable/btn_save_background"
                     android:gravity="center"
                     android:text="@string/cancel" />
