--- a/HeadControl/app/src/main/res/values/colors.xml
+++ b/HeadControl/app/src/main/res/values/colors.xml
@@ -104,6 +104,7 @@
     <color name="maroon">#800000</color><!--粟色 -->
     <color name="aquamarine">#7FFFD4</color><!--碧绿色-->
     <color name="chartreuse">#7FFF00</color><!--黄绿色 -->
+    <color name="path">#A3F648</color><!--黄绿色 -->
     <color name="lawngreen">#7CFC00</color><!--草绿色 -->
     <color name="mediumslateblue">#7B68EE</color><!--中暗蓝色 -->
     <color name="lightslategray">#778899</color><!--亮蓝灰 -->
