--- a/HeadControl/app/src/main/res/values/styles.xml
+++ b/HeadControl/app/src/main/res/values/styles.xml
@@ -48,9 +48,9 @@
 
     </style>
     <style name="MyTextView">
-        <item name="android:layout_gravity">center_vertical</item>
+        <item name="android:layout_gravity">center</item>
         <item name="android:textColor">@color/black</item>
-        <item name="android:textSize">25sp</item>
+        <item name="android:textSize">30sp</item>
     </style>
     <style name="MyButton">
         <item name="android:textColor">@color/black</item>
@@ -60,8 +60,10 @@
         <item name="android:layout_width">200dp</item>
     </style>
     <style name="MySpiner">
+        <item name="android:background">@mipmap/you_anniu_no</item>
         <item name="android:layout_width">200dp</item>
         <item name="android:layout_height">100dp</item>
+        <item name="android:gravity">center</item>
         <item name="android:textColor">@color/black</item>
         <item name="android:textSize">25sp</item>
     </style>
